# CPP-white-belt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  names_ans_lastnames.cpp
mylib/: linked_list.h  mylib.cpp  mylib.h  mymap.h  myset.h  myvector.h
theory/: class.cpp  main_iter.cpp  map.cpp  set.cpp  time+func.cpp  vector.cpp
week1/: main_discount.cpp  main_division.cpp  main_equeintance.cpp  main_even.cpp  main_find_second_f.cpp  main_int_to_binary.cpp  main_max_divider.cpp  main_min_str.cpp
week2/: IsPalindrom.cpp  PalindromFilter.cpp  main_factorial.cpp  move_strings.cpp  reverse.cpp  reversed.cpp  update_if_greater.cpp
week3/: names1.cpp  sort_array.cpp  sort_lexograf_caseinsensetive.cpp  sorted_strings(class).cpp
week4/: EnsureEqual.cpp  files.cpp
